# devgpt

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  OAI_CONFIG_LIST_sample  README.md  SECURITY.md  TRANSPARENCY_FAQS.md  setup.py
.devcontainer/: Dockerfile  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
dotnet/: .editorconfig  DevGpt.sln  Directory.Build.props  README.md
notebook/: Async_human_input.ipynb  JSON_mode_example.ipynb  agent_library_example.json  (+70 more)
samples/apps/cap/py/: README.md  pyproject.toml
samples/apps/cap/py/demo/: AGDemo.py  AGGroupChatDemo.py  App.py  AppAgents.py  CAPAutGenGroupDemo.py  CAPDevGptPairDemo.py  ComplexActorDemo.py  SimpleActorDemo.py  _paths.py  list_agents.py  single_threaded.py  zmq_tests.py
samples/apps/cap/py/demo/standalone/: Broker.py  UserProxy.py  _paths.py  assistant.py  directory_svc.py  user_proxy.py
samples/apps/cap/py/devgptcap/: Broker.py  DebugLog.py  DirectorySvc.py  requirements.txt  runtime_factory.py  setup.py  utility.py
samples/apps/cap/py/devgptcap/ag_adapter/: AG2CAP.py  AGActor.py  CAP2AG.py  CAPGroupChat.py  CAPGroupChatManager.py  CAPPair.py  DevGptConnector.py  agent.py
samples/apps/cap/py/devgptcap/proto/: Devgpt.proto  Devgpt_pb2.py  proto-instructions.txt
samples/apps/devgpt-studio/: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml
samples/apps/devgpt-studio/devgptstudio/: chatmanager.py  cli.py  datamodel.py  version.py  workflowmanager.py
samples/apps/devgpt-studio/devgptstudio/database/: alembic.ini  utils.py
samples/apps/devgpt-studio/devgptstudio/database/migrations/: env.py
samples/apps/devgpt-studio/devgptstudio/utils/: utils.py
samples/apps/devgpt-studio/devgptstudio/web/: app.py
samples/apps/devgpt-studio/frontend/: gatsby-config.ts  package.json
samples/apps/devgpt-studio/frontend/src/components/: footer.tsx  icons.tsx
samples/apps/devgpt-studio/frontend/src/components/views/gallery/: gallery.tsx
samples/apps/devgpt-studio/notebooks/: tutorial.ipynb
samples/tools/devgptbench/: CONTRIBUTING.md  README.md  pyproject.toml
samples/tools/devgptbench/devgptbench/: cli.py  clone_cmd.py  run_cmd.py
samples/tools/devgptbench/devgptbench/res/: Dockerfile
samples/tools/devgptbench/devgptbench/template/: global_init.sh  testbed_utils.py
samples/tools/devgptbench/scenarios/AutoGPT/: README.md
samples/tools/devgptbench/scenarios/AutoGPT/Scripts/: custom_tabulate.py
samples/tools/devgptbench/scenarios/AutoGPT/Templates/TwoAgents/: scenario.py
samples/tools/devgptbench/scenarios/Examples/: README.md
samples/tools/devgptbench/scenarios/Examples/Templates/ThreeAgents/: scenario.py
samples/tools/devgptbench/scenarios/Examples/Templates/TwoAgents/: scenario.py
samples/tools/devgptbench/scenarios/GAIA/: README.md
samples/tools/devgptbench/scenarios/GAIA/Scripts/: custom_tabulate.py
samples/tools/devgptbench/scenarios/GAIA/Templates/BasicTwoAgents/: scenario.py
samples/tools/devgptbench/scenarios/GAIA/Templates/SocietyOfMind/: requirements.txt  scenario.py
samples/tools/devgptbench/scenarios/HumanEval/: README.md
samples/tools/devgptbench/scenarios/HumanEval/Templates/GroupChatFourAgents/: scenario.py
samples/tools/devgptbench/scenarios/HumanEval/Templates/GroupChatThreeAgents_Distractor/: scenario.py
samples/tools/devgptbench/scenarios/HumanEval/Templates/GroupChatThreeAgents_Guardrails/: scenario.py
samples/tools/devgptbench/scenarios/HumanEval/Templates/TwoAgents/: scenario.py
samples/tools/devgptbench/scenarios/MATH/: README.md
samples/tools/devgptbench/scenarios/MATH/Scripts/: custom_tabulate.py
samples/tools/devgptbench/scenarios/MATH/Templates/TwoAgents/: scenario.py
(+582 files in other folders)
